--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,39 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header,
+footer {
+  background-color: grey;
+  margin: 1rem;
+  padding: 1rem;
+}
+footer {
+  text-align: center;
+}
+main .numberCircle {
+  background: lightsalmon;
+  border: 0.01em solid #0f1c3f;
+  border-radius: 50%;
+  margin-top: 2rem;
+  margin-left: 40%;
+  height: 5em;
+  width: 5em;
+  text-align: center;
+  font: 40px Arial, sans-serif;
+}
+button {
+  background-color: grey; /* Green */
+  border: none;
+  border-radius: 3px;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  font-size: 16px;
+  width: 13%;
+  margin-top: 2rem;
+  margin-left: 1rem;
+  position: relative;
+  left: 25%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
