--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header h1 {
+  margin: auto;
+  width: 20%;
+  padding: 10px;
+  font-size: 40px;
+}
+header,
+footer {
+  background-color: cornflowerblue;
+  height: 100px;
+  padding: 2rem;
+}
+
+footer {
+  text-align: center;
+}
+.footer_content {
+  font-size: 20px;
+}
+
+main {
+  min-height: calc(100vh);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main div {
+  margin: 0 auto;
+}
+
+.circle {
+  height: 200px;
+  width: 200px;
+  background-color: olive;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  background-color: goldenrod;
+  padding: 1rem;
+  border-radius: 5px;
+  border: none;
+  margin: 1rem;
+  left: 15%;
+}
+
+.odd {
+  background-color: darkorange;
+}
+.even {
+  background-color: rgb(101, 44, 3);
 }
